# sysinternals-listent

./: .gitignore  CODE_ANALYSIS.md  CONSTITUTION.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TEST_SPECIFICATIONS.md  USER_SCENARIOS.md  build.rs  help  homebrew-formula.rb  output.json  run_all_tests.sh  run_functional_tests.sh  test_monitor_ctrl_c.sh
.github/: copilot-instructions.md
assets/: README.md
docs/: threat-model.md
specs/001-macos-rust-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-macos-rust-cli/contracts/: cli-options.md  output-human-format.md  output-json-schema.json
specs/002-add-monitor-switch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-monitor-switch/contracts/: cli-contract.md  output-format.md  unified-logging.md
specs/003-add-launchd-daemon/: ARCHITECTURAL_EVOLUTION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-launchd-daemon/contracts/: cli-contract.md  configuration-contract.md  uls-integration.md
src/: cli.rs  constants.rs  lib.rs  main.rs  scan.rs
src/cli/: mod.rs
src/daemon/: config.rs  ipc.rs  launchd.rs  logging.rs  logging_backup.rs  mod.rs
src/entitlements/: mod.rs  native.rs
src/models/: mod.rs  tests.rs
src/monitor/: core.rs  mod.rs  polling.rs  process_tracker.rs  unified_logging.rs
src/output/: mod.rs  progress.rs
src/scan/: mod.rs
tests/: functional_codesign_accuracy.rs  functional_comprehensive.rs  functional_monitor.rs  functional_static_scan.rs  simple_functional.rs  test_cli_help.rs  test_cli_version.rs  test_daemon_cli.rs  test_daemon_config.rs  test_daemon_integration.rs  test_daemon_logging.rs  test_json_output.rs  test_launchd_integration.rs  test_monitor_cli.rs  test_monitor_output.rs  test_pattern_matching.rs
tests/contract/: test_cli_args_validation.rs  test_cli_help.rs  test_cli_version.rs  test_human_output_format.rs  test_json_schema.rs  test_monitor_filters.rs  test_unified_logging.rs
tests/helpers/: mod.rs  reliable_runner.rs
tests/integration/: test_basic_monitoring.rs  test_combined_filters.rs  test_default_scan.rs  test_entitlement_filters.rs  test_interrupt_handling.rs  test_json_output.rs  test_monitor_entitlement_filtering.rs  test_monitor_output_formats.rs  test_monitor_path_filtering.rs  test_no_matches.rs  test_path_filters.rs  test_real_process_detection.rs  test_unreadable_files.rs
tests/unit/: test_models.rs
