[package]
name = "listent"
version = "1.0.0"
edition = "2021"
authors = ["Sysinternals"]
license = "MIT"
description = "Fast Sysinternals command-line tool to discover and list code signing entitlements for macOS executable binaries"
readme = "README.md"
repository = ""
keywords = ["cli", "macos", "security", "entitlements", "codesign"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata]
# Reserved for future use per constitution

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
signal-hook = "0.3"
# Monitor mode dependencies
sysinfo = "0.29"

# Efficient plist parsing for entitlements
plist = "1.5"

# Daemon mode dependencies
tokio = { version = "1.0", features = ["rt", "net", "fs", "signal", "time", "macros", "io-util", "sync", "rt-multi-thread"] }
glob = "0.3"
oslog = "0.2"
log = "0.4"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
libc = "0.2"
serde_json = "1.0"
